--- a/sample-app/BlazorStore.Client.Web/Pages/Index.razor
+++ b/sample-app/BlazorStore.Client.Web/Pages/Index.razor
@@ -2,8 +2,5 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<MudText Typo="Typo.h3">Hello, world!</MudText>
+<MudText>Welcome to your new app.</MudText>
