--- a/sample-app/BlazorStore.Client.Web/Pages/Index.razor
+++ b/sample-app/BlazorStore.Client.Web/Pages/Index.razor
@@ -1,6 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<MudText Typo="Typo.h3">Hello, world!</MudText>
-<MudText>Welcome to your new app.</MudText>
+<MudPaper Class="flex-grow-1 ma-4 pa-4" Elevation="1">
+    <MudText Typo="Typo.h3">Hello, world!</MudText>
+    <MudText>I'm a sample application.</MudText>
+</MudPaper>
+
+
