--- a/sample-app/BlazorStore.Client.Web/Pages/Products.razor
+++ b/sample-app/BlazorStore.Client.Web/Pages/Products.razor
@@ -16,17 +16,19 @@
     }
     else
     {
-        <div class="d-flex flex-row flex-wrap gap-4">
+        <MudGrid>
             @foreach (var product in _products)
             {
-                <MudPaper Class="pa-4" Style="width: 20%" onclick="@(() => OnRowClick(product))">
-                    <MudImage Src="@product.ImageUrl" Style="width: 100%"></MudImage>
-                    <MudText Typo="Typo.h6">@product.Name</MudText>
-                    <MudText>@product.UnitPrice.ToString("C")</MudText>
-                    <MudText Typo="Typo.caption">@product.Description</MudText>
-                </MudPaper>
+                <MudItem xs="3">
+                    <MudPaper Class="pa-4" Style="height: 100%" onclick="@(() => OnRowClick(product))">
+                        <MudImage Src="@product.ImageUrl" Style="width: 100%"></MudImage>
+                        <MudText Typo="Typo.h6">@product.Name</MudText>
+                        <MudText>@product.UnitPrice.ToString("C")</MudText>
+                        <MudText Typo="Typo.caption">@product.Description</MudText>
+                    </MudPaper>
+                </MudItem>
             }
-        </div>
+        </MudGrid>
     }
 </div>
 
