--- a/sample-app/BlazorStore.Client.Web/Shared/MainLayout.razor
+++ b/sample-app/BlazorStore.Client.Web/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudText Typo="Typo.h5" Class="ml-3">BlazorStore</MudText>
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+        <MudButton Color="Color.Secondary" Variant="Variant.Filled" Href="/authentication">Log in</MudButton>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
