--- a/hybrid-app/BlazorStore.Client.Web/Shared/NavMenu.razor
+++ b/hybrid-app/BlazorStore.Client.Web/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@using BlazorStore.Client.Web.Services
-@inject CartStateContainer CartState
+﻿@inject CartStateContainer CartState
 
 <MudNavMenu>
     <MudNavLink Match="NavLinkMatch.All" Href="/">
