--- a/hybrid-app/BlazorStore.Client.Web/_Imports.razor
+++ b/hybrid-app/BlazorStore.Client.Web/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using BlazorStore.Client.Web
 @using BlazorStore.Client.Web.Shared
-@using MudBlazor
+@using BlazorStore.Client.Web.Services
