--- a/sample-app/BlazorStore.Client.Web/Pages/Cart.razor
+++ b/sample-app/BlazorStore.Client.Web/Pages/Cart.razor
@@ -1,5 +1,4 @@
-﻿@using BlazorStore.Client.Web.Services
-@page "/cart"
+﻿@page "/cart"
 @inject CartStateContainer CartState
 
 <PageTitle>Cart</PageTitle>
