Add shared entrypoint to Web project

--- a/hybrid-app/BlazorStore.Client.Shared/SharedApp.razor
+++ b/hybrid-app/BlazorStore.Client.Shared/SharedApp.razor
@@ -2,7 +2,7 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<Router AppAssembly="@typeof(App).Assembly">
+<Router AppAssembly="@typeof(SharedApp).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
