--- a/hybrid-app/BlazorStore.Client.Web/_Imports.razor
+++ b/hybrid-app/BlazorStore.Client.Web/_Imports.razor
@@ -7,6 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using BlazorStore.Client.Web
-@using BlazorStore.Client.Web.Shared
-@using BlazorStore.Client.Web.Services
+@using BlazorStore.Client.Shared
