--- a/hybrid-app/BlazorStore.Client.Maui/_Imports.razor
+++ b/hybrid-app/BlazorStore.Client.Maui/_Imports.razor
@@ -4,5 +4,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorStore.Client.Maui
-@using BlazorStore.Client.Maui.Shared
+@using BlazorStore.Client.Shared
