--- a/hybrid-app-part1/BlazorStore.Client.Shared/Pages/Index.razor
+++ b/hybrid-app-part1/BlazorStore.Client.Shared/Pages/Index.razor
@@ -4,5 +4,5 @@
 
 <MudPaper Class="flex-grow-1 ma-4 pa-4" Elevation="1">
     <MudText Typo="Typo.h3">Hello, world!</MudText>
-    <MudText>I'm a sample application.</MudText>
+    <MudText>I'm a sample application edited in a shared project!</MudText>
 </MudPaper>
