Change Product and Products pages to be more responsive

--- a/hybrid-app-part2/BlazorStore.Client.Shared/Pages/Product.razor
+++ b/hybrid-app-part2/BlazorStore.Client.Shared/Pages/Product.razor
@@ -13,10 +13,10 @@
     else
     {
         <MudGrid>
-            <MudItem xs="6">
+            <MudItem xs="12" md="6">
                 <MudImage Src="@_product.ImageUrl" Style="width: 100%"></MudImage>
             </MudItem>
-            <MudItem xs="6">
+                <MudItem xs="12" md="6">
                 <MudStack>
                     <MudText Typo="Typo.h6">@_product.Name</MudText>
                     <MudText>@_product.UnitPrice.ToString("C")</MudText>
