--- a/hybrid-app-part2/BlazorStore.Client.Shared/Pages/Products.razor
+++ b/hybrid-app-part2/BlazorStore.Client.Shared/Pages/Products.razor
@@ -18,7 +18,7 @@
         <MudGrid>
             @foreach (var product in _products)
             {
-                <MudItem xs="3">
+                <MudItem xs="12" sm="6" md="4" lg="3">
                     <MudPaper Class="pa-4" Style="height: 100%" onclick="@(() => OnRowClick(product))">
                         <MudImage Src="@product.ImageUrl" Style="width: 100%"></MudImage>
                         <MudText Typo="Typo.h6">@product.Name</MudText>
