--- a/hybrid-app-part2/BlazorStore.Client.Maui/_Imports.razor
+++ b/hybrid-app-part2/BlazorStore.Client.Maui/_Imports.razor
@@ -5,3 +5,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorStore.Client.Shared
+@using MudBlazor
