--- a/hybrid-app-part2/BlazorStore.Client.Shared/SharedApp.razor
+++ b/hybrid-app-part2/BlazorStore.Client.Shared/SharedApp.razor
@@ -1,8 +1,9 @@
-﻿<MudThemeProvider />
+﻿@using System.Reflection
+<MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<Router AppAssembly="@typeof(SharedApp).Assembly">
+<Router AppAssembly="@typeof(SharedApp).Assembly" AdditionalAssemblies="@(new[] { HostAssembly })">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -14,3 +15,8 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    [Parameter]
+    public Assembly? HostAssembly { get; set; }
+}
